Cap location image height

--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@ function LVTConfigurator() {
               <div style={{
                 display: 'flex',
                 justifyContent: 'center',
-                alignItems: 'center'
+                alignItems: 'flex-start'
               }}>
                 <img 
                   src="https://cdn.prod.website-files.com/674d649ddd92d4cd09236107/68c180ba911caf0351e75fde_81d8df77eec8c23c496c2124ef88fd43_liveunit2%201%402x.avif"
@@ -703,6 +703,7 @@ function LVTConfigurator() {
                   style={{
                     width: '100%',
                     maxWidth: '605px',
+                    maxHeight: '360px',
                     height: 'auto',
                     objectFit: 'contain'
                   }}
